--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,7 @@ body.offcanvas {
 
 .services {
   margin-bottom: 30px;
-  padding: 1.5em;
+  padding: 1.42em;
   -webkit-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
   -moz-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
   -ms-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
@@ -631,7 +631,9 @@ body.offcanvas {
   .services h3 {
     font-family: "Quicksand", Arial, sans-serif;
     font-size: 16px;
-    font-weight: 500; }
+    font-weight: 500;
+    text-align: center;
+   }
   .services.color-2 {
     border-bottom: 2px solid #ec5453; }
     .services.color-2 .icon2 i {
